--- a/style_layout003.css
+++ b/style_layout003.css
@@ -1,17 +1,13 @@
-@charset 'utf-8';
+/* 언어설정 */
+@charset "UTF-8";
 
-/* box1 가로정렬 */
-.box1-1 {float: left; width: 20%;}
-.box1-2 {float: left; width: 80%;}
-.box1::after {display: block; clear: both; content: "";}
+/* 박스 A와 박스 B의 가로정렬 */
 
-/* box3 가로정렬 */
-.box3-1 {float: left; width: 33.3333%; font-size: 30px;}
-.box3-2 {float: left; width: 33.3333%;}
-.box3-3 {float: left; width: 33.3333%;}
-.box3::after{display: block; clear: both; content: "";}
-
-/* box4 가로정렬 */
-.box4-1 {float: left; width: 20%;}
-.box4-2 {float: left; width: 80%;}
-.box4::after{display: block; clear: both; content: "";}
+.boxA {float: left;
+        width: 70%;}
+.boxB {float: left;
+    width: 30%;}  
+.box3:after {content: "";
+            clear: both;
+            display: block;}
+    
