--- a/doit/css/reset.css
+++ b/doit/css/reset.css
@@ -8,7 +8,7 @@
 body {font-family: 'Nanum Gothic', sans-serif;
     line-height: 1;
     background: linear-gradient(to top , #666666 , #ffffff);}
-    /* css-generater 활용가능
+    /* --css-generater 활용가능
         https://css3generator.com/ */
 
 ul {list-style: none;}
@@ -16,12 +16,44 @@ a {color: #ffffff;
     text-decoration: none;}
 img {vertical-align: top;}
 
+/* basic css */
+/* --inside-area setting */
+#wrap section {box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                -webkit-box-sizing: border-box;}
+
+/* info area */
+.info_section {width: 100%;
+            background-color: #2ecc71;}
+.info_section>ul {display: flex;}
+.info_section>ul>li {width: 25%;}
+.info_section>ul>li>a {display: block;
+                text-align: center;
+                padding: 15px 0;}
+.info_section>ul>li>a>i {}
+
+/* header area */
+.header {flex-direction: column;
+        width: 100%;}
+.header>h1 {width: 100%;
+        font-size: 21px;
+        line-height: 1.3;
+        background-color: #2ecc71;
+        position: relative;}
+.logo>a {display: block;
+        padding: 30px 0;
+        text-align: center;}
+.header>nav {width: 100%;}
+.gnv {display: flex;}
+.gnv>li {}
+.gnv>li>a {}
+
 
 /* ------------------------------media-query------------------------------ */
 /* mobile 320px */
 #wrap {display: flex;
     flex-direction: column;
-    flex-wrap: no wrap;
+    flex-wrap: nowrap;
     width: 80%;
     margin: 0 auto;}
 
@@ -29,7 +61,47 @@ img {vertical-align: top;}
 @media (min-width:768px){
     #wrap {flex-direction: row;
         flex-wrap: wrap;}
+    /* --info area */
+    .info_section {
+            position: absolute;
+            width: auto;
+            top: 30px;
+            z-index: 50;
+            right: 30px;}
+    .info_section>ul>li {
+            width: auto;
+            padding: 15px 15px;}
+    
+    /* --header area */
+.header {flex-direction: row;}
+.header>h1 {width: 16%;
+    font-size: 21px;
+    line-height: 1.3;
+    background-color: #2ecc71;
+    position: absolute;}
+.logo>a {display: block;
+    padding: 50px 0;
+    text-align: center;}
+.header>nav {width: 84%;
+background-color: #2ecc71;}
 }
+
+.gnv {display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    justify-content: space-around}
+.gnv>li {display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        justify-content: center;}
+.gnv>li>a {display: block;}
+
+/* toggle button */
+.menu_toggle_btn {display: none;}
+.sub_menu_toggle-btn {display: none;}
+
 /* web 1280px */
 @media (min-width:1280px){
     
