--- a/doit/css/reset.css
+++ b/doit/css/reset.css
@@ -12,97 +12,213 @@ body {font-family: 'Nanum Gothic', sans-serif;
         https://css3generator.com/ */
 
 ul {list-style: none;}
-a {color: #ffffff;
+a {color: gray;
     text-decoration: none;}
 img {vertical-align: top;}
 
 /* basic css */
 /* --inside-area setting */
-#wrap section {box-sizing: border-box;
-                -moz-box-sizing: border-box;
-                -webkit-box-sizing: border-box;}
+#wrap section {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;}
 
-/* info area */
-.info_section {width: 100%;
-            background-color: #2ecc71;}
-.info_section>ul {display: flex;}
-.info_section>ul>li {width: 25%;}
-.info_section>ul>li>a {display: block;
-                text-align: center;
-                padding: 15px 0;}
-.info_section>ul>li>a>i {}
+/* info_section area */
+.info_section {
+    order: 0;
+    position: absolute;
+    width: auto;
+    top: 30px;
+    right: 30px;
+    z-index: 30px;
+    background-color: #2ecc71;
+}
+.info_list {
+    display: flex;
+}
+.info_list li {
+    width: auto;
+}
+.info_list li a {
+    display: block;
+    padding: 10px;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+/* toggle btn */
+.sub_menu_toggle_btn {
+    display: none;
+}
+.menu_toggle_btn {
+    display: none;
+}
 
 /* header area */
-.header {flex-direction: column;
-        width: 100%;}
-.header>h1 {width: 100%;
-        font-size: 21px;
-        line-height: 1.3;
-        background-color: #2ecc71;
-        position: relative;}
-.logo>a {display: block;
-        padding: 30px 0;
-        text-align: center;}
-.header>nav {width: 100%;}
-.gnv {display: flex;}
-.gnv>li {}
-.gnv>li>a {}
+.header h1 {
+    width: 12.5%;
+    position: absolute;
+    left: 0; top: 0;
+    font-size: 21px;
+    line-height: 1.3;/* --> em 단위 생략 =130% */
+    text-align: center;
+    background-color: #2ecc71;
+}
+.header h1 a {
+    display: block;
+    padding: 30px 0;
+    color: #ffffff;
+}
+.header nav {
+    width: 87.5%;
+    background-color: #2ecc71;
+    display: flex;
+    align-items: center;
+}
+.gnb {
+    display: flex;
+}
+.gnb li {width: auto;}
+.gnb li a {
+    display: block;
+    font-size: 20px;
+    padding: 50px;
+    color: #ffffff;
+}
 
-
-/* ------------------------------media-query------------------------------ */
-/* mobile 320px */
-#wrap {display: flex;
+/* slider area */
+.slider_section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+    height: auto;
+}
+.slider_section span {
+    width: 34px;
+    height: 39px;
+    cursor: pointer;
+    text-indent: -9999px;
+    background-repeat: no-repeat;
+}
+span.prev_btn {
+    background-image: url(../img/slider_arrow.png);
+    margin: -10px;
+    background-position: top left;
+}
+span.next_btn {
+    background-image: url(../img/slider_arrow.png);
+    background-position: top right;
+    margin: -10px;
+}
+/* gallery area */
+.gallery_section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.gallery_list {
+    display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    width: 80%;
-    margin: 0 auto;}
+    flex-wrap: wrap;
+    padding: 30px 0;
+}
+.gallery_list li {
+    width: 200px;
+    height: auto;
+    padding: 10px;
+}
+.gallery_list li a {
+    display: block;
+}
+.gallery_list figure {
+    text-align: center;
+}
+.gallery_list img {
+    width: 100%;
+    height: auto;
+}
+.gallery_list figcaption {
+    margin-top: 10px;
+}
+/* rankup area */
+.rankup_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.rankup_section .title {
+    margin-bottom: 30px;
+    font-size: 20px;
+    text-align: center;
+    color: #ffffff;
+}
+.rankup_section .rankup_list {}
+.rankup_section .rankup_list>li {}
+.rankup_section .rankup_list>li>a {
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: bold;
+}
 
-/* tablet 768px */
+
+
+
+/* ******order setting****** */
+.header {
+    order: 1;
+}
+.slider_section {
+    order: 2;
+}
+/* gallery area */
+.gallery_section {
+    order: 3;
+}
+/* rankup area */
+.rankup_section {
+    order: 4;
+}
+/* latestpost area */
+.latest_post_section {
+    order: 5;
+}
+/* popularpost area */
+.popular_post_section {
+    order: 6;
+}
+/* banner area */
+.banner_section {
+    order: 7;
+}
+/* sns area */
+.social_section {
+    order: 8;
+}
+/* footer area */
+.footer {
+    order: 9;
+}
+/* ------------------------------media-query------------------------------ */
+/* ((mobile)) 767px or less */
+@media (max-width:767px){
+    #wrap {display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 80%;
+        margin: 0 auto;}
+}
+
+
+/* ((tablet)) 768px */
 @media (min-width:768px){
     #wrap {flex-direction: row;
         flex-wrap: wrap;}
-    /* --info area */
-    .info_section {
-            position: absolute;
-            width: auto;
-            top: 30px;
-            z-index: 50;
-            right: 30px;}
-    .info_section>ul>li {
-            width: auto;
-            padding: 15px 15px;}
-    
-    /* --header area */
-.header {flex-direction: row;}
-.header>h1 {width: 16%;
-    font-size: 21px;
-    line-height: 1.3;
-    background-color: #2ecc71;
-    position: absolute;}
-.logo>a {display: block;
-    padding: 50px 0;
-    text-align: center;}
-.header>nav {width: 84%;
-background-color: #2ecc71;}
 }
-
-.gnv {display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    justify-content: space-around}
-.gnv>li {display: flex;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        justify-content: center;}
-.gnv>li>a {display: block;}
-
-/* toggle button */
-.menu_toggle_btn {display: none;}
-.sub_menu_toggle-btn {display: none;}
-
-/* web 1280px */
+/* ((web)) 1280px */
 @media (min-width:1280px){
     
 }
