--- a/doit/css/reset.css
+++ b/doit/css/reset.css
@@ -78,7 +78,9 @@ img {vertical-align: top;}
 .gnb {
     display: flex;
 }
-.gnb li {width: auto;}
+.gnb li {
+    width: auto;
+}
 .gnb li a {
     display: block;
     font-size: 20px;
@@ -163,7 +165,6 @@ span.next_btn {
     color: #ffffff;
     font-weight: bold;
 }
-
 
 
 
