--- a/doit/ex/ex_mystyle1201.css
+++ b/doit/ex/ex_mystyle1201.css
@@ -5,30 +5,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Solway&display=swap');
 
 /* settings */
-
 * {
     font-family: 'Solway', serif;
     line-height: 1;
     margin: 0;
     padding: 0;
 }
-
-
 ul {
     list-style: none;
 }
-
 a {
-    color: #ffffff;
+    color: #fff;
     text-decoration: none; 
 }
 
-#wrap {
+/* #wrap {
     display: flex;
     flex-flow: row wrap;
     width: 90%;
-    margin: 0 auto;
-}
+    margin: 0 auto;} */
 #wrap section {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -38,123 +33,208 @@ a {
 
 /* info area */
 .info_section {
-    width: 100%;
+    order: 0;
+    position: absolute;
+    width: auto;
+    top: 30px; right: 30px;
+    z-index: 30px;
     background-color: lightseagreen;
 }
 .info_list {
     display: flex;
 }
-.info_list>li {
-    width: 25%;
+.info_list li {
+    width: auto;
 }
-.info_list>li>a {
+.info_list li a {
     display: block;
-    text-align: center;
-    padding: 15px 0;
+    padding: 10px;
+    color: #fff;
+    font-size: 20px;
 }
-
 
 /* header area */
-.header {
-    flex-direction: column;
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
-    width: 100%;
-}
-.logo {
-    background-color:lightseagreen;
-    font-size: 21px;
-    line-height: 1.3;
-    width: 100%;
-    height: 142px;
-    position: relative;
+
+.header .logo {
+    width: 12.5%;
+    position: absolute;
     left: 0; top: 0;
+    font-size: 22px;
+    line-height: 1.3;
+    text-align: center;
+    background-color: lightseagreen;
 }
-.logo>a {
+.header h1 a {
     display: block;
     padding: 30px 0;
-    text-align: center;
 }
-.nav {
+.header .nav {
+    width: 87.5%;
     background-color: lightseagreen;
-    width: 100%;
-    height: 80px;
+    display: flex;
+    align-items: center;
 }
 .nav_list {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-
-    justify-content: space-around;}
+}
 .nav_list>li {
-    display: flex;
-    align-items: center;
-    width: 100%;
-
-    justify-content: center;
+    width: auto;
 }
 .nav_list>li>a {
     display: block;
+    font-size: 20px;
+    padding: 50px;
 }
 
 /* slider area */
 .slider_section {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: gray;
-    width: 60%;
-    height: 270px;
+    width: 40%;
+    height: auto;
 }
+.slider_section span {
+    width: 34px;
+    height: 39px;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    color: #fff;
+}
+
 
 /* gallery area */
 .gallery_section {
     display: flex;
     background-color: lemonchiffon;
-    width: 40%;
-    height: 270px;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
 }
-
+.gallery_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.gallery_list li {
+    width: 200px;
+    height: auto;
+    padding: 10px;
+}
+.gallery_list li a {
+    display: block;
+}
+.gallery_list figure {
+    text-align: center;
+}
+.gallery_list img {
+    width: 100%;
+    height: auto;
+}
+.gallery_list figcaption {
+    color: black;
+    margin-top: 10px;
+}
 /* schedule area */
 .schedule_section {
     display: flex;
-    background-color: lightslategray;
-    width: 40%;
-    height: 250px;
+    width: 30%;
+    height: 440px;
 }
-
+.schedule_section img {
+    width: 100%;
+    height: auto;
+}
+/* profile area */
+.profile_section {
+    display: flex;
+    width: 40%;
+    height: 270px;
+    background-color: lightslategray;
+}
 /* diary area */
 .diary_section {
-    display: flex;
     background-color:plum;
     width: 40%;
-    height: 250px;
+    height: 270px;
 }
 /* sns area */
 .sns_section {
-    display: flex;
     background-color: lavender;
     width: 20%;
-    height: 250px;
+    height: 270px;
+}
+.sns_title {}
+.sns_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.sns_list li {
+}
+.sns_list li a {
+    display: block;
+    color: black;
+    font-size: 30px;
+    margin: 20px;
 }
 /* footer area */
 .footer{
-    display: flex;
-    background-color: black;
+    background-color: #333;
     color: azure;
-    width: 100%;
-    height: 70px;
+    font-size: 14px;
+    font-style: italic;
+    align-items: center;
 }
 
 
+/* *****order settings***** */
+/* header area */
+.header {
+    order: 1;
+}
+/* slider area */
+.slider_section {
+    order: 2;
+}
+/* gallery area */
+.gallery_section {
+    order: 3;
+}
+/* schedule area */
+.schedule_section {
+    order: 4;
+}
+/* profile area */
+.profile_section {
+    order: 5;
+}
+/* diary area */
+.diary_section {
+    order: 6;
+}
+/* sns area */
+.sns_section {
+    order: 7;
+}
+/* footer area */
+.footer {
+    order: 8;
+}
+
 /* -------------------------media-query------------------------- */
 /* mobile 320px*/
-#wrap {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 80%;
-    margin: 0 auto;}
-
+@media (max-width:767px){
+    #wrap {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 80%;
+        margin: 0 auto;}
+}
 
 /* tablet 768px*/
 @media (min-width:768px){
@@ -162,60 +242,10 @@ a {
         flex-direction: row;
         flex-wrap: wrap;
     }
-    /* --info area-- */
-    .info_section {
-        background-color: lightblue;
-        position: absolute;
-        width: auto;
-        top: 30px;
-        z-index: 50;
-        right: 30px;
-    }
-    .info_list>li {
-        width: auto;
-        padding: 15px 15px;
-    }
-    /* --header area-- */
-    .header {
-        flex-direction: row;
-    }
-    .logo {
-        width: 16%;
-        background-color: lightblue;
-        position: absolute;
-    }
-    .logo>a {
-        display: block;
-        padding: 50px 0;
-        text-align: center;
-    }
-    .nav {
-        background-color: lightblue;
-        width: 84%;
-    }
-    .nav_list{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 100%;
-        justify-content: space-around;
-    }
-    .nav_list>li {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        justify-content: center;
-    }
-    .nav_list>li>a {
-        display: block;
-    }
 }
-
 
 /* web 1280px*/
 @media (min-width:1280px){
-
 }
 
 
