--- a/doit/ex/ex_mystyle1201.css
+++ b/doit/ex/ex_mystyle1201.css
@@ -101,6 +101,17 @@ a {
     cursor: pointer;
     background-repeat: no-repeat;
     color: #fff;
+    text-indent: -9999px;
+}
+span.prev_btn {
+    background-image: url(../img/slider_arrow.png);
+    margin: -10px;
+    background-position: top left;
+}
+span.next_btn {
+    background-image: url(../img/slider_arrow.png);
+    background-position: top right;
+    margin: -10px;
 }
 
 
@@ -144,6 +155,7 @@ a {
     height: 440px;
 }
 .schedule_section img {
+    display: block;
     width: 100%;
     height: auto;
 }
@@ -174,6 +186,7 @@ a {
     align-items: center;
 }
 .sns_list li {
+    
 }
 .sns_list li a {
     display: block;
@@ -190,6 +203,13 @@ a {
     align-items: center;
 }
 
+/* toggle btn */
+.sub_menu_toggle_btn {
+    display: none;
+}
+.menu_toggle_btn {
+    display: none;
+}
 
 /* *****order settings***** */
 /* header area */
@@ -226,29 +246,148 @@ a {
 }
 
 /* -------------------------media-query------------------------- */
-/* mobile 320px*/
+/* ((mobile)) 767px or less */
 @media (max-width:767px){
-    #wrap {
-        display: flex;
+    #wrap {display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
         width: 80%;
         margin: 0 auto;}
 }
 
-/* tablet 768px*/
-@media (min-width:768px){
-    #wrap {
-        flex-direction: row;
+
+/* ((tablet)) 768px or more */
+@media (min-width:768px) and (max-width:1139px){
+    /* info_section area */
+    .info_section {
+        order: 0;
+        position: relative;
+        width: 100%;
+        top: 0;
+        right: 0;
+        z-index: 50px;
+    }
+    .info_list {
+        display: flex;
+        width: 100%;
+    }
+    .info_list li {
+        width: 25%;
+    }
+    .info_list li a {
+        display: block;
+        padding: 10px;
+        color: #ffffff;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    /* header area */
+    .header { 
+        width: 100%;
         flex-wrap: wrap;
     }
+    .header>h1 {
+        width:15%;
+        position: absolute;
+        left: 0;
+        top:40px;
+        font-size: 21px;
+        line-height: 1.3;
+        text-align: center;
+        z-index: 10;
+    }
+    .header>h1>a {
+        display: block;
+        padding: 30px 0;
+        color: #fff;
+    }
+    .header>nav {
+        width:100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+    .nav_list {
+        display: none; /* 토글버튼 클릭시 변화할 부분 */
+        flex-direction: column;
+        flex-wrap: wrap;
+        position: absolute;
+        top:80px;
+        right:-60%;
+        width: 100%;
+    }
+    .nav_list li {
+        width: 40%;
+        background-color: #2c3e50;
+        display: flex;
+        position: relative; 
+    }
+    .nav_list li a {
+        display: block;
+        font-size: 20px;
+        padding: 20px 10px;
+        color: #fff;
+    }
+    /* toggle btn */
+        .sub_menu_toggle_btn {
+        display: block;
+        background-image: url(../img/sub_menu_toggle_btn.png); 
+        width: 20px;
+        height: 20px;
+        background-repeat: no-repeat;
+        text-indent: -9999px;
+        padding: 20px 0;
+        background-size: contain;
+        position: absolute; 
+        top: 20px;
+        right: 20px;
+    }
+    .menu_toggle_btn {
+        cursor: pointer;
+        display: block;
+        position: absolute;
+        z-index: 60;
+        top:70px;
+        right: 50px;
+        background-image: url(../img/menu_toggle_btn.png);
+        width:30px ;
+        height: 30px;
+        background-repeat: no-repeat;
+        text-indent: -9999px;
+    }
+
+
+    /* ******order setting****** */
+    .header {
+        order: 1;
+    }
+    .slider_section {
+        order: 2;
+    }
+    .gallery_section {
+        order: 6;
+    }
+    .schedule_section {
+        order: 3;
+    }
+    .pofile_section {
+        order: 4;
+    }
+    .diary_section {
+        order: 7;
+    }
+    .sns_section {
+        order: 5;
+    }
+    .footer {
+        order: 8;
+    }
+
 }
 
-/* web 1280px*/
-@media (min-width:1280px){
+
+/* ((web)) 1140px or more */
+@media (min-width:1140px){
+    
 }
-
-
-/* toggle button */
-.menu_toggle_btn {display: none;}
-.sub_menu_toggle_btn {display: none;}
