--- a/blog/ex/ex_blogstyle.css
+++ b/blog/ex/ex_blogstyle.css
@@ -70,6 +70,38 @@ a {
     margin-bottom: 20px;
 }
 
+/* sns set */
+.sns {
+    margin-top: 40px;
+}
+.sns ul {
+    display: flex;
+}
+.sns ul li {
+    flex: 1;
+}
+.sns ul li:nth-child(1) a {
+    background-color: #f9e100;
+}
+.sns ul li:nth-child(2) a {
+    background-color: #1877f2;
+}
+.sns ul li:nth-child(3) a {/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5851db+0,c13584+34,f77737+70,fcaf45+100 */
+    background: #5851db; /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  #5851db 0%, #c13584 34%, #f77737 70%, #fcaf45 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg,  #5851db 0%,#c13584 34%,#f77737 70%,#fcaf45 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #5851db 0%,#c13584 34%,#f77737 70%,#fcaf45 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5851db', endColorstr='#fcaf45',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.sns ul li a {
+    display: block;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 12px;
+    color: #fff;
+}
+.sns ul li i {}
+
 /* latest set */
 .latest {
     margin-bottom: 30px;
@@ -97,6 +129,7 @@ a {
     margin-bottom: 10px;
     border-bottom: dotted lightcoral 2px;
     font-size: 18px;
+    color: #555;
 }
 .recommend ul {}
 .recommend li {}
@@ -105,6 +138,8 @@ a {
     padding: 5px;
     font-size: 15px;
     color: #555;
+    position: relative;
+    margin-bottom: 10px;
 }
 /* popular set */
 .popular {
@@ -122,7 +157,24 @@ a {
     display: block;
     padding: 5px;
     font-size: 15px;
+    position: relative;
     color: #555;
+}
+.popular li a img {
+    width: 100%;
+    height: auto;
+    vertical-align: bottom;
+}
+.popular .text {
+    position: absolute;
+    bottom: 0; left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    width: 100%;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 /* footer set */
