--- a/blog/ex/style.css
+++ b/blog/ex/style.css
@@ -171,7 +171,7 @@ a {
 .recommend li {}
 .recommend li a {
     display: block;
-    padding: 5px;
+    padding: 0px;
     font-size: 14px;
     position: relative;
     margin-bottom: 10px;
@@ -289,13 +289,58 @@ a {
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box
     }
+    .box1, .boxA, .box5 {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 
 
 /*-------------------------- media query-------------------------- */
-/* mobile */
+/* 1.normal-((((mobile)))) 599px or less---------- */
+@media (max-width:599px){
+    /* sns */
+    .sns span {
+        display: inline-block;
+        text-indent: -9999px;
+    }
+    /* relation article */
+    .relation ul li {
+        float: left;
+        width: 50%;
+    }
+    .relation li a {
+        display: block;
+        padding: 5px;
+        font-size: 12px;
+        text-align: center;
+    }
+    .relation li:nth-child(odd) {
+        clear: both;
+    }
+    /* odd - 홀수, even - 짝수 */
+}
 
+/* 2.max-((((mobile)))) 600px ~ 767px or less---------- */
+@media (min-width:600px) and (max-width:767px){
+    /* box4-1 & 4-2 가로정렬 */
+    .box4-1 {
+        float: left;
+        width: 49%;
+    }
+    .box4-2 {
+        float: right;
+        width: 49%;
+    }
+    .box4::after {
+        content: "";
+        clear: both;
+        display: block;
+    }
+
+
+}
 /*  --------((tablet)) 768px or more----------*/
-@media(min-width:768px){
+@media (min-width:768px){
     .box3 {
         width: 70%;
         float: left;
@@ -312,7 +357,7 @@ a {
 }
 
 /* -------------((web)) 1280px or more -------------*/
-@media (min-width:1280px) {
+@media (min-width:1280px){
     .box1,
     .boxA,
     .copyright,
