--- a/doit/css/reset.css
+++ b/doit/css/reset.css
@@ -57,14 +57,18 @@ img {vertical-align: top;}
 }
 
 /* header area */
+.header {
+    z-index: 30;
+}
 .header h1 {
     width: 12.5%;
     position: absolute;
-    left: 0; top: 0;
+    left: 0; top: 20;
     font-size: 21px;
     line-height: 1.3;/* --> em 단위 생략 =130% */
     text-align: center;
     background-color: #2ecc71;
+    z-index: 10;
 }
 .header h1 a {
     display: block;
@@ -97,6 +101,7 @@ img {vertical-align: top;}
     align-items: center;
     width: 50%;
     height: auto;
+    z-index: 10;
 }
 .slider_section span {
     width: 34px;
@@ -330,18 +335,283 @@ span.next_btn {
 }
 
 
-/* ----------------media-query---------------- */
-/* ((mobile)) 767px or less */
+/* ------------------------media-query------------------------ */
+/* ((((((mobile)))))) 767px or less */
 @media (max-width:767px){
     #wrap {display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
         width: 80%;
         margin: 0 auto;}
+    
+     /* info_section area */
+    .info_section {
+        order: 0;
+        position: relative;
+        width: 100%;
+        top: 0;
+        right: 0;
+        z-index: 50px;
+        background-color: #2ecc71;
+    }
+    .info_list {
+        display: flex;
+        width: 100%;
+    }
+    .info_list li {
+        width: 25%;
+    }
+    .info_list li a {
+        display: block;
+        padding: 10px;
+        color: #ffffff;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    /* header area */
+    .header { 
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .header>h1 {
+        width:100%;
+        position: absolute;
+        left: 0;
+        top:40px;
+        font-size: 21px;
+        line-height: 1.3;
+        text-align: center;
+        background-color:#2ecc71 ;
+        z-index: 10;
+    }
+    .header>h1>a {
+        display: block;
+        padding: 20px 0;
+        color: #fff;
+    }
+    
+    .header>nav {
+        width:100%;
+        background-color: #2ecc71;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+    
+    .gnb {
+        display: none; /* 토글버튼 클릭시 변화할 부분 */
+        flex-direction: column;
+        flex-wrap: wrap;
+        position: absolute;
+        top:80px;
+        right:-60%;
+        width: 100%;
+    }
+    .gnb>li {
+        width: 40%;
+        background-color: #2c3e50;
+        display: flex;
+        position: relative; 
+    }
+    .gnb>li>a {
+        display: block;
+        font-size: 20px;
+        padding: 20px 10px;
+        color: #fff;
+    }
+    /* toggle btn */
+        .sub_menu_toggle_btn {
+        display: block;
+        background-image: url(../img/sub_menu_toggle_btn.png); 
+        width: 20px;
+        height: 20px;
+        background-repeat: no-repeat;
+        text-indent: -9999px;
+        padding: 20px 0;
+        background-size: contain;
+        position: absolute; 
+        top: 20px;
+        right: 20px;
+    }
+    .menu_toggle_btn {
+        display: block;
+        position: absolute;
+        z-index: 60;
+        top:70px;
+        right: 50px;
+        background-image: url(../img/menu_toggle_btn.png);
+        width:30px ;
+        height: 30px;
+        background-repeat: no-repeat;
+        text-indent: -9999px;
 }
 
 
-/* ((tablet)) 768px or more */
+
+    /* slider area */
+    .slider_section {
+        width: 100%;
+        background-color: #3c90be;
+        height: 440px;
+    }
+
+    /* gallery area */
+    .gallery_section {
+        background-color: #f8de73;
+        width: 100%;
+        height: 440px;
+    }
+    .gallery_list {
+        flex-direction: row;
+    }
+    .gallery_list li {
+        width: 50%;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+
+    /* rankup area */
+    .rankup_section {
+        background-color: #00d2a5;
+        width: 100%;
+        height: 440px;
+    }
+
+    /* latestpost area */
+    .latest_post_section {
+        background-color: #9cabe4;
+        width: 100%;
+        height: 270px;
+    }
+
+    /* popular area */
+    .popular_post_section {
+        background-color: #d76817;
+        width: 100%;
+    }
+
+    /* banner area */
+    .banner_section {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .banner_section>div {
+        flex: 1;
+    }
+    .banner_box_01 {
+        background-color: #0175bb;
+    }
+    .banner_box_02 {
+        background-color: #1261c9;
+    }
+
+
+    .banner_box_01 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+    }
+    .banner_box_01 a {
+        display: block;
+        width: 100px;
+    }
+    .banner_box_01 svg {
+        width: 100%;
+        height: auto;
+        fill: #fff;
+    }
+    .banner_box_02 { 
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .banner_box_02 .banner_list {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+    }
+    .banner_list li a {
+        display: block;
+        width: 42px;
+        padding: 20px 10px;
+    }
+    .banner_list li a svg {fill: #fff;}
+
+    /* social area */
+    .social_section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .social_list {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+    }
+    .social_list li {
+        margin: 0;
+        padding: 20px 0;
+    }
+    .social_list li a {
+        display: flex;
+        width: 55px;
+        height: 55px;
+        align-items: center;
+        justify-content: center;
+        background-color: black;
+        border-radius: 50%;
+    }
+    .social_section {
+        background-color: #fe6eda;
+        width: 100%;
+    }
+
+        /* ******order setting****** */
+        .header {
+            order: 1;
+        }
+        .slider_section {
+            order: 2;
+        }
+        /* gallery area */
+        .gallery_section {
+            order: 5;
+        }
+        /* rankup area */
+        .rankup_section {
+            order: 6;
+        }
+        /* latestpost area */
+        .latest_post_section {
+            order: 3;
+        }
+        /* popularpost area */
+        .popular_post_section {
+            order: 4;
+        }
+        /* banner area */
+        .banner_section {
+            order: 7;
+        }
+        /* sns area */
+        .social_section {
+            order:8;
+        }
+        /* footer area */
+        .footer {
+            order: 9;
+        }
+}
+
+
+/* ((((((tablet)))))) 768px or more */
 @media (min-width:768px) and (max-width:1139px){
     /* info_section area */
     .info_section {
@@ -445,46 +715,115 @@ span.next_btn {
 }
 
 
-    /* ******order setting****** */
-    .header {
-        order: 1;
-    }
+
+    /* slider area */
     .slider_section {
-        order: 2;
+        width: 60%;
+        background-color: #3c90be;
+        height: 440px;
     }
+
     /* gallery area */
     .gallery_section {
-        order: 7;
+        background-color: #f8de73;
+        width: 70%;
+        height: 440px;
     }
+    .gallery_list {
+        flex-direction: row;
+    }
+
     /* rankup area */
     .rankup_section {
-        order: 3;
+        background-color: #00d2a5;
+        width: 40%;
+        height: 440px;
     }
+
     /* latestpost area */
     .latest_post_section {
-        order: 4;
+        background-color: #9cabe4;
+        width: 40%;
+        height: 270px;
     }
-    /* popularpost area */
+
+    /* popular area */
     .popular_post_section {
-        order: 5;
+        background-color: #d76817;
+        width: 40%;
     }
+
     /* banner area */
     .banner_section {
-        order: 8;
+        display: flex;
+        flex-direction: column;
+        width: 30%;
     }
-    /* sns area */
+    .banner_section>div {
+        flex: 1;
+    }
+    .banner_box_01 {
+        background-color: #0175bb;
+    }
+    .banner_box_02 {
+        background-color: #1261c9;
+    }
+
+    /* social area */
     .social_section {
-        order: 6;
+        background-color: #fe6eda;
+        width: 20%;
     }
-    /* footer area */
-    .footer {
-        order: 9;
-    }
+
+
+
+
+
+        /* ******order setting****** */
+        .header {
+            order: 1;
+        }
+        .slider_section {
+            order: 2;
+        }
+        /* gallery area */
+        .gallery_section {
+            order: 7;
+        }
+        /* rankup area */
+        .rankup_section {
+            order: 3;
+        }
+        /* latestpost area */
+        .latest_post_section {
+            order: 4;
+        }
+        /* popularpost area */
+        .popular_post_section {
+            order: 5;
+        }
+        /* banner area */
+        .banner_section {
+            order: 8;
+        }
+        /* sns area */
+        .social_section {
+            order: 6;
+        }
+        /* footer area */
+        .footer {
+            order: 9;
+        }
+
 
 }
 
 
-/* ((web)) 1140px or more */
+/* ((((((web)))))) 1140px or more */
 @media (min-width:1140px){
-    
+    .gnb {
+        display: flex !important;}
+    #wrap {
+        max-width: 1200px;
+    }
 }
