--- a/doit/ex/ex_mystyle1201.css
+++ b/doit/ex/ex_mystyle1201.css
@@ -8,37 +8,40 @@
 * {
     font-family: 'Solway', serif;
     line-height: 1;
-    margin: 0;
-    padding: 0;
 }
 ul {
     list-style: none;
 }
 a {
-    color: #fff;
     text-decoration: none; 
+    color: #000;
+}
+img {
+    vertical-align: top;
 }
 
-/* #wrap {
-    display: flex;
-    flex-flow: row wrap;
-    width: 90%;
-    margin: 0 auto;} */
 #wrap section {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
 
+/* toggle btn */
+.sub_menu_toggle_btn {
+    display: none;
+}
+.menu_toggle_btn {
+    display: none;
+}
 
 /* info area */
 .info_section {
     order: 0;
     position: absolute;
     width: auto;
-    top: 30px; right: 30px;
-    z-index: 30px;
-    background-color: lightseagreen;
+    top: 15px; 
+    right: 30px;
+    z-index: 50;
 }
 .info_list {
     display: flex;
@@ -49,28 +52,30 @@ a {
 .info_list li a {
     display: block;
     padding: 10px;
-    color: #fff;
     font-size: 20px;
 }
 
 /* header area */
+.header {
+    z-index: 30;
+}
 
 .header .logo {
     width: 12.5%;
     position: absolute;
     left: 0; top: 0;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 1.3;
     text-align: center;
-    background-color: lightseagreen;
+    z-index: 10;
 }
+
 .header h1 a {
     display: block;
-    padding: 30px 0;
+    padding: 10px 0;
 }
 .header .nav {
     width: 87.5%;
-    background-color: lightseagreen;
     display: flex;
     align-items: center;
 }
@@ -83,7 +88,7 @@ a {
 .nav_list>li>a {
     display: block;
     font-size: 20px;
-    padding: 50px;
+    padding: 0 50px;
 }
 
 /* slider area */
@@ -92,8 +97,9 @@ a {
     justify-content: space-between;
     align-items: center;
     background-color: gray;
-    width: 40%;
+    width: 50%;
     height: auto;
+    z-index: 10;
 }
 .slider_section span {
     width: 34px;
@@ -118,19 +124,17 @@ span.next_btn {
 /* gallery area */
 .gallery_section {
     display: flex;
-    background-color: lemonchiffon;
     justify-content: center;
     align-items: center;
-    width: 30%;
 }
 .gallery_list {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px 0;
 }
 .gallery_list li {
-    width: 200px;
+    width: 160px;
     height: auto;
     padding: 10px;
 }
@@ -145,105 +149,116 @@ span.next_btn {
     height: auto;
 }
 .gallery_list figcaption {
-    color: black;
     margin-top: 10px;
 }
-/* schedule area */
-.schedule_section {
+/* banner area */
+.banner_section {}
+.banner_box_01 {
     display: flex;
-    width: 30%;
-    height: 440px;
+    justify-content: center;
+    align-items: center;
+    height: 135px;
 }
-.schedule_section img {
+.banner_box_01 a {
     display: block;
+    width: 100px;
+}
+.banner_box_01 svg {
     width: 100%;
     height: auto;
+    fill: #fff;
 }
-/* profile area */
-.profile_section {
+.banner_box_02 {
+    height: 135px;
     display: flex;
-    width: 40%;
-    height: 270px;
-    background-color: lightslategray;
-}
-/* diary area */
-.diary_section {
-    background-color:plum;
-    width: 40%;
-    height: 270px;
-}
-/* sns area */
-.sns_section {
-    background-color: lavender;
-    width: 20%;
-    height: 270px;
-}
-.sns_title {}
-.sns_list {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+.banner_list {
+    display: flex;
+}
+.banner_list li a{
+    display: block;
+    width: 42px;
+    padding: 0 10px;
+} 
+
+/* sns area */
+.sns_section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sns_list {}
 .sns_list li {
-    
+    margin: 10px 0;
 }
 .sns_list li a {
-    display: block;
-    color: black;
-    font-size: 30px;
-    margin: 20px;
+    display: flex;
+    width: 55px;
+    height: 55px;
+    align-items: center;
+    justify-content: center;
+    background-color: #333;
+    border-radius: 50%;
 }
+.sns_list i {
+    font-size: 20px;
+    color: #fff;
+}
+.sns_list li:nth-child(1) a {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#405de6+0,833ab4+31,e1306c+69,fcaf45+100 */
+    background: #405de6; /* Old browsers */
+    background: -moz-linear-gradient(left,  #405de6 0%, #833ab4 31%, #e1306c 69%, #fcaf45 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  #405de6 0%,#833ab4 31%,#e1306c 69%,#fcaf45 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  #405de6 0%,#833ab4 31%,#e1306c 69%,#fcaf45 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#405de6', endColorstr='#fcaf45',GradientType=1 ); /* IE6-9 */
+    }
+.sns_list li:nth-child(2) a {
+    background-color: #ff0000;}
+.sns_list li:nth-child(3) a {
+    background-color: #f9e000;}
 /* footer area */
-.footer{
+.footer p {
     background-color: #333;
     color: azure;
     font-size: 14px;
     font-style: italic;
-    align-items: center;
+    letter-spacing: 2px;
+    padding: 30px 20px;
 }
 
-/* toggle btn */
-.sub_menu_toggle_btn {
-    display: none;
-}
-.menu_toggle_btn {
-    display: none;
-}
 
-/* *****order settings***** */
-/* header area */
+/* ******order setting****** */
 .header {
     order: 1;
 }
-/* slider area */
 .slider_section {
     order: 2;
 }
-/* gallery area */
 .gallery_section {
     order: 3;
 }
-/* schedule area */
-.schedule_section {
+.profile_section {
     order: 4;
 }
-/* profile area */
-.profile_section {
+.schedule_section {
     order: 5;
 }
-/* diary area */
 .diary_section {
     order: 6;
 }
-/* sns area */
-.sns_section {
+.banner_section {
     order: 7;
+}
+.sns_section {
+    order: 8;
 }
 /* footer area */
 .footer {
-    order: 8;
+    order: 9;
 }
+
 
 /* -------------------------media-query------------------------- */
 /* ((mobile)) 767px or less */
@@ -258,106 +273,91 @@ span.next_btn {
 
 /* ((tablet)) 768px or more */
 @media (min-width:768px) and (max-width:1139px){
-    /* info_section area */
+
     .info_section {
-        order: 0;
         position: relative;
         width: 100%;
-        top: 0;
-        right: 0;
-        z-index: 50px;
+        top: 0; 
+        right: 0; 
+        z-index: 50;
+        background-color: lemonchiffon;
     }
     .info_list {
-        display: flex;
         width: 100%;
     }
     .info_list li {
         width: 25%;
     }
     .info_list li a {
-        display: block;
-        padding: 10px;
-        color: #ffffff;
         font-size: 20px;
         text-align: center;
     }
-
-    /* header area */
-    .header { 
+    .header {
         width: 100%;
         flex-wrap: wrap;
     }
-    .header>h1 {
-        width:15%;
-        position: absolute;
-        left: 0;
-        top:40px;
-        font-size: 21px;
-        line-height: 1.3;
-        text-align: center;
-        z-index: 10;
+    .header .logo {
+        top: 50px;
+        font-size: 20px;
     }
-    .header>h1>a {
-        display: block;
-        padding: 30px 0;
-        color: #fff;
-    }
-    .header>nav {
-        width:100%;
-        display: flex;
-        align-items: center;
+    .header .nav {
+        width: 100%;
         position: relative;
     }
     .nav_list {
-        display: none; /* 토글버튼 클릭시 변화할 부분 */
+        display: none; /*toggle btn click*/
+        position: absolute;
         flex-direction: column;
         flex-wrap: wrap;
-        position: absolute;
-        top:80px;
-        right:-60%;
+        top: 80px;
+        right: -60%;
         width: 100%;
+        z-index: 50;
     }
-    .nav_list li {
-        width: 40%;
-        background-color: #2c3e50;
+    .nav_list>li {
+        position: relative;
         display: flex;
-        position: relative; 
+        width: 40%;
+        background-color: lemonchiffon;
     }
-    .nav_list li a {
+    .nav_list>li>a {
         display: block;
         font-size: 20px;
         padding: 20px 10px;
-        color: #fff;
+        color: #000;
     }
-    /* toggle btn */
-        .sub_menu_toggle_btn {
+
+    /* toggle btn set */
+    .sub_menu_toggle_btn {
         display: block;
-        background-image: url(../img/sub_menu_toggle_btn.png); 
+        background-image: url(../img/plus-solid.svg);
         width: 20px;
         height: 20px;
+        position: absolute;
         background-repeat: no-repeat;
-        text-indent: -9999px;
-        padding: 20px 0;
-        background-size: contain;
-        position: absolute; 
         top: 20px;
         right: 20px;
+        padding: 20px 0;
+        background-size: contain;
+        text-indent: -9999px;
     }
     .menu_toggle_btn {
         cursor: pointer;
         display: block;
         position: absolute;
-        z-index: 60;
-        top:70px;
-        right: 50px;
-        background-image: url(../img/menu_toggle_btn.png);
-        width:30px ;
-        height: 30px;
+        background-image: url(../img/bars-solid.svg);
         background-repeat: no-repeat;
+        z-index: 60;
+        width: 35px;
+        height: 35px;
         text-indent: -9999px;
+        top: 70px; right: 50px;
     }
-
-
+    .banner_section {
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+    }
     /* ******order setting****** */
     .header {
         order: 1;
@@ -366,22 +366,25 @@ span.next_btn {
         order: 2;
     }
     .gallery_section {
+        order: 5;
+    }
+    .profile_section {
         order: 6;
     }
     .schedule_section {
         order: 3;
     }
-    .pofile_section {
+    .diary_section {
         order: 4;
     }
-    .diary_section {
+    .banner_section {
         order: 7;
     }
     .sns_section {
-        order: 5;
+        order: 8;
     }
     .footer {
-        order: 8;
+        order: 9;
     }
 
 }
@@ -389,5 +392,9 @@ span.next_btn {
 
 /* ((web)) 1140px or more */
 @media (min-width:1140px){
-    
+    .gnb {
+        display: flex !important;}
+    #wrap {
+        max-width: 1200px;
+    }
 }
