--- a/doit/css/reset.css
+++ b/doit/css/reset.css
@@ -93,6 +93,9 @@ img {vertical-align: top;}
     padding: 0 50px;
     color: #ffffff;
 }
+.gnb li a:hover {
+    font-weight: bold;
+}
 
 /* slider area */
 .slider_section {
@@ -133,20 +136,26 @@ span.next_btn {
     flex-wrap: wrap;
     padding: 30px 0;
 }
-.gallery_list li {
+.gallery_list>li {
     width: 200px;
     height: auto;
     padding: 10px;
 }
-.gallery_list li a {
+.gallery_list>li>a {
     display: block;
+    color: #fff;
 }
+.gallery_list>li>a:hover {
+    filter: grayscale(100%);
+    color: #333;
+}
+
 .gallery_list figure {
     text-align: center;
 }
 .gallery_list img {
-    width: 100%;
-    height: auto;
+    width: 200px;
+    height: 100px;
 }
 .gallery_list figcaption {
     margin-top: 10px;
@@ -164,15 +173,37 @@ span.next_btn {
     font-size: 20px;
     text-align: center;
     color: #ffffff;
+    letter-spacing: 10px;
 }
+
+.rankup_section .title::after {
+    content: "(2022.12 update)";
+    display: block;
+    font-size: 14px;
+    margin-top: 5px;
+    font-weight: normal;
+    color: #666;
+    letter-spacing: 1px;
+}
+
 .rankup_section .rankup_list {}
-.rankup_section .rankup_list>li {}
+.rankup_section .rankup_list>li {
+    margin-bottom: 15px;
+}
 .rankup_section .rankup_list>li>a {
+    background-image: url(../img/square-caret-right-solid.svg);
+    background-repeat: no-repeat;
+    background-size: 8%;
+    background-position: left center;
+    text-indent: 20px;
     display: block;
     padding: 10px;
     font-size: 14px;
     font-weight: bold;
     color: #ffffff;
+}
+.rankup_list li a:hover {
+    color: #000;
 }
 
 /* latest_post area */
@@ -196,6 +227,15 @@ span.next_btn {
     font-size: 14px;
     color: #ffffff;
     font-weight: bold;
+}
+.latest_post_section em {
+    font-size: 18px;
+    font-style: normal;
+    margin-right: 5px;
+    color: rgb(20, 17, 71);
+}
+.latest_post_list li a:hover {
+    text-decoration: underline;
 }
 
 /* popular_post area */
@@ -221,6 +261,15 @@ span.next_btn {
     color: #ffffff;
     font-weight: bold;
 }
+.popular_post_section em {
+    font-size: 18px;
+    font-style: normal;
+    margin-right: 8px;
+    color: rgb(104, 34, 5);
+}
+.popular_post_list li a:hover {
+    text-decoration: underline;
+}
 
 /* banner area */
 .banner_section {}
@@ -236,7 +285,12 @@ span.next_btn {
     width: 100%;
     height: auto;
     fill: #fff;
+    transition: all 0.5s;
 }
+.banner_box_01 a:hover svg {
+    transform: scale(1.2);
+}
+
 .banner_box_02 { 
     height: 135px;
     display: flex;
@@ -246,13 +300,19 @@ span.next_btn {
 .banner_box_02 .banner_list {
     display: flex;
 }
+.banner_box_02 a:hover svg {
+    transform: scale(1.2);
+}
 .banner_list li {}  
 .banner_list li a {
     display: block;
     width: 42px;
     padding: 0 10px
 }
-.banner_list li a svg {fill: #fff;}
+.banner_list li a svg {
+    fill: #fff;
+}
+
 
 /* social area */
 .social_section {
@@ -346,12 +406,11 @@ span.next_btn {
     
      /* info_section area */
     .info_section {
-        order: 0;
         position: relative;
         width: 100%;
         top: 0;
         right: 0;
-        z-index: 50px;
+        z-index: 50;
         background-color: #2ecc71;
     }
     .info_list {
@@ -447,8 +506,6 @@ span.next_btn {
         text-indent: -9999px;
 }
 
-
-
     /* slider area */
     .slider_section {
         width: 100%;
@@ -460,7 +517,6 @@ span.next_btn {
     .gallery_section {
         background-color: #f8de73;
         width: 100%;
-        height: 440px;
     }
     .gallery_list {
         flex-direction: row;
@@ -478,7 +534,7 @@ span.next_btn {
     .rankup_section {
         background-color: #00d2a5;
         width: 100%;
-        height: 440px;
+        padding: 20px 0;
     }
 
     /* latestpost area */
@@ -520,6 +576,7 @@ span.next_btn {
     .banner_box_01 a {
         display: block;
         width: 100px;
+        padding: 20px 0;
     }
     .banner_box_01 svg {
         width: 100%;
